sidebar naviation overlap issue

--- a/style.css
+++ b/style.css
@@ -765,7 +765,9 @@ animation: blink 1s linear infinite;
 
 
 @media only screen and (max-width: 37.5rem) {
-
+    body {
+        padding-top: 6rem; /* Add padding to account for fixed navbar */
+    }
 
 
     .sidebar-navigation {
